2008-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (substitute_object_recurse): Use lower-level primitives.
	Don't signal errors when traversing sub-char-tables.
	Don't loop over all the possible characters when traversing char-tables.

	* print.c (print_preprocess): Add sub-char-tables to the print-table,
	just like we do in print.c.

2008-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (Ftry_completion): Remove code left over from when we used
	scmp instead of Fcompare_strings.

2008-05-04  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Fw32_battery_status): Fix computation of %t (h:min) format.

2008-05-04  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* image.c [USE_MAC_IMAGE_IO] (image_load_image_io):
	Create bitmap context in native byte order.

	* macterm.c (XDrawLine)
	(XCreatePixmapFromBitmapData) [USE_MAC_IMAGE_IO]: Create bitmap
	context in native byte order.

2008-05-04  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* config.in: Regenerate.

	* image.c (PIX_MASK_DRAW, PIX_MASK_RETAIN) [USE_MAC_IMAGE_IO]:
	New definitions for Image I/O support.
	(XGetImage, XPutPixel, XGetPixel, XDestroyImage)
	(mac_create_cg_image_from_image, x_create_x_image_and_pixmap)
	[USE_MAC_IMAGE_IO]: Add implementations for Image I/O support.
	(mac_data_provider_release_data, image_load_image_io)
	[USE_MAC_IMAGE_IO]: New functions.
	(CGImageCreateWithPNGDataProviderProcType) [MAC_OSX]: Remove typedef.
	(MyCGImageCreateWithPNGDataProvider) [MAC_OSX]: Remove variable.
	(init_image_func_pointer) [MAC_OSX]: Remove function.
	(image_load_quartz2d) [MAC_OSX]: Check availability of
	CGImageCreateWithPNGDataProvider at compile time.
	Use lowercase `false' for boolean constant.
	(png_load, jpeg_load, tiff_load, gif_load) [USE_MAC_IMAGE_IO]:
	Use image_load_image_io.
	(png_load) [!USE_MAC_IMAGE_IO && MAC_OSX]:
	Don't check MyCGImageCreateWithPNGDataProvider.
	(init_image) [MAC_OSX && TARGET_API_MAC_CARBON]: